# acme-motor-quote-poc

./: .gitignore  ARCHITECTURE.md  README.md
backend/: .env.example  pyproject.toml
backend/app/: agent.py  conflict.py  explain.py  extraction.py  main.py  mcp_client.py  quote_session_client.py  service.py
backend/app/api/: main.py
backend/app/llm/: agent.py  tools.py
backend/tests/: test_agent.py  test_agent_loop.py  test_api.py  test_conflict.py  test_engine.py  test_explain.py  test_extraction.py  test_mcp_client.py  test_mocks.py  test_quote_session_client.py  test_reprice_api.py  test_service.py  test_tools.py
docs/: open-questions-for-acme.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  theme.css  types.ts
mcp-server/: .env.example  pyproject.toml
mcp-server/app/: acme_client.py  models.py  platform_client.py  schemas.py  server.py
mcp-server/tests/: test_acme_client.py  test_integration_acme.py  test_models.py  test_platform_client.py  test_schemas.py  test_server.py  test_store.py  test_wiremock_mappings.py
mock-acme/: README.md
mock-acme/mappings/: fr-quotes.json  fr-vehicles.json  gb-quotes.json  gb-vehicles.json
platform/: HELP.md  pom.xml  pyproject.toml
platform/app/: api.py  channel.py  demo.py  events.py  model.py  quote_service.py  required.py  sessions.py  vendor.py
platform/tests/: test_api.py  test_channel.py  test_demo.py  test_events.py  test_model.py  test_quote_service.py  test_quotes_api.py  test_required.py  test_sessions.py  test_vendor.py
(+69 files in other folders)
