[project]
name = "mcp-server"
version = "0.1.0"
description = "MCP server exposing ACME motor-quote tools over the Model Context Protocol."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.28.0",
    "pydantic>=2",
    "starlette>=1.3.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
